# manager/public/docs/openapi.json
@@ -55,36 +55,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "integer"
-                                                },
-                                                "message": {
-                                                    "type": "string"
-                                                }
-                                            },
-                                            "type": "object",
-                                            "nullable": true
-                                        },
-                                        "violations": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "propertyPath": {
-                                                        "type": "string"
-                                                    },
-                                                    "title": {
-                                                        "type": "string"
-                                                    }
-                                                },
-                                                "type": "object"
-                                            },
-                                            "nullable": true
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/ErrorModel"
                                 }
                             }
                         }
@@ -154,36 +125,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "integer"
-                                                },
-                                                "message": {
-                                                    "type": "string"
-                                                }
-                                            },
-                                            "type": "object",
-                                            "nullable": true
-                                        },
-                                        "violations": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "propertyPath": {
-                                                        "type": "string"
-                                                    },
-                                                    "title": {
-                                                        "type": "string"
-                                                    }
-                                                },
-                                                "type": "objects"
-                                            },
-                                            "nullable": true
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/ErrorModel"
                                 }
                             }
                         }
@@ -571,36 +513,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "integer"
-                                                },
-                                                "message": {
-                                                    "type": "string"
-                                                }
-                                            },
-                                            "type": "object",
-                                            "nullable": true
-                                        },
-                                        "violations": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "propertyPath": {
-                                                        "type": "string"
-                                                    },
-                                                    "title": {
-                                                        "type": "string"
-                                                    }
-                                                },
-                                                "type": "objects"
-                                            },
-                                            "nullable": true
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/ErrorModel"
                                 }
                             }
                         }
@@ -639,36 +552,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "integer"
-                                                },
-                                                "message": {
-                                                    "type": "string"
-                                                }
-                                            },
-                                            "type": "object",
-                                            "nullable": true
-                                        },
-                                        "violations": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "propertyPath": {
-                                                        "type": "string"
-                                                    },
-                                                    "title": {
-                                                        "type": "string"
-                                                    }
-                                                },
-                                                "type": "objects"
-                                            },
-                                            "nullable": true
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/ErrorModel"
                                 }
                             }
                         }
@@ -1006,6 +890,40 @@
         }
     },
     "components": {
+        "schemas": {
+            "ErrorModel": {
+                "properties": {
+                    "error": {
+                        "properties": {
+                            "code": {
+                                "type": "integer"
+                            },
+                            "message": {
+                                "type": "string"
+                            }
+                        },
+                        "type": "object",
+                        "nullable": true
+                    },
+                    "violations": {
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "propertyPath": {
+                                    "type": "string"
+                                },
+                                "title": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        },
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "oauth2": {
                 "type": "oauth2",
