# manager/src/Controller/Api/Work/Projects/TasksController.php
@@ -232,18 +232,7 @@ class TasksController extends AbstractController
      *     @OA\Response(
      *          response=400,
      *          description="Errors",
-     *          @OA\JsonContent(
-     *              type="object",
-     *              @OA\Property(property="error", type="object", nullable=true,
-     *                  @OA\Property(property="code", type="integer"),
-     *                  @OA\Property(property="message", type="string"),
-     *              ),
-     *              @OA\Property(property="violations", type="array", nullable=true, @OA\Items(
-     *                  type="objects",
-     *                  @OA\Property(property="propertyPath", type="string"),
-     *                  @OA\Property(property="title", type="string"),
-     *              ))
-     *          )
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorModel")
      *     ),
      *     security={{"oauth2": {"common"}}}
      * )
@@ -291,18 +280,7 @@ class TasksController extends AbstractController
      *     @OA\Response(
      *          response=400,
      *          description="Errors",
-     *          @OA\JsonContent(
-     *              type="object",
-     *              @OA\Property(property="error", type="object", nullable=true,
-     *                  @OA\Property(property="code", type="integer"),
-     *                  @OA\Property(property="message", type="string"),
-     *              ),
-     *              @OA\Property(property="violations", type="array", nullable=true, @OA\Items(
-     *                  type="objects",
-     *                  @OA\Property(property="propertyPath", type="string"),
-     *                  @OA\Property(property="title", type="string"),
-     *              ))
-     *          )
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorModel")
      *     ),
      *     security={{"oauth2": {"common"}}}
      * )
